# Agentic-RAG-LangGraph

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile.fastapi  app.py  requirements.txt
chat_hist/: chat.db
frontend/: Dockerfile.streamlit  requirements.txt  streamlit - Copy.py  streamlit.py
notebook/: main.ipynb  notebook_with_ConversationBufferMemory.ipynb  notebook_with_Creating_vector_store.ipynb  notebook_with_LongTerm_memory.ipynb  notebook_with_PreDefinedVectorStore.ipynb  notebook_with_Streaming.ipynb  notebook_with_conversationsummerymemory.ipynb  notebook_with_differt_retrrivers.ipynb  project.ipynb
src/agent/: agentic_workflow.py  model_loader.py
src/all_nodes/: nodes - Copy.py  nodes.py
src/audio/: audio_record.py
src/config/: config_loader.py  model_loader.py
src/prompt_library/: prompt.py
vectorstores/dermatology_faiss/: index.pkl
