[project]
name = "agentic-rag-using-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "agentic-rag-using-langgraph",
    "aiosqlite>=0.21.0",
    "cryptography>=45.0.6",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pillow>=11.3.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]

[tool.uv.sources]
agentic-rag-using-langgraph = { workspace = true }
